iptables
# Generated by iptables-save v1.4.7 on Thu Nov 14 09:22:58 2013
*nat
:PREROUTING ACCEPT [9375943:1931028582]
:POSTROUTING ACCEPT [345227:23491911]
:OUTPUT ACCEPT [345227:23491911]
-A POSTROUTING -s 10.0.0.0/8 -j MASQUERADE 
COMMIT
# Completed on Thu Nov 14 09:22:58 2013
# Generated by iptables-save v1.4.7 on Thu Nov 14 09:22:58 2013
*filter
:INPUT DROP [347999:41192403]
:FORWARD ACCEPT [149226:106142326]
:OUTPUT ACCEPT [4180433:9460853517]
-A INPUT -i lo -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT 
-A INPUT -p icmp -m icmp --icmp-type 0 -m limit --limit 3/sec -j ACCEPT 
-A INPUT -p icmp -m icmp --icmp-type 8 -m limit --limit 3/sec -j ACCEPT 
-A INPUT -p udp -m udp --sport 53 -j ACCEPT 
-A INPUT -p tcp -m tcp --sport 53 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 1723 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 47 -j ACCEPT 
-A INPUT -p gre -j ACCEPT 
-A INPUT -p tcp -m tcp --sport 80 -j ACCEPT 
-A INPUT -p tcp -m tcp --sport 443 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 8000 -j ACCEPT 
COMMIT
# Completed on Thu Nov 14 09:22:58 2013
